--- a/platzi.html
+++ b/platzi.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ES-es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="platzi.css">
 </head>
 <body>
-    
+    <h1>Hola mundo </h1>
 </body>
 </html>
